# MateBot

./: .CLAUDE.md  .gitignore  .tmux.conf.local  CHANGELOG.md  GUIDE.md  README.md  TMUX_SETUP.md  attention_manager.py  bridge.py  examples_attention_manager.py  examples_external_memory.py  examples_failure_memory.py  examples_kv_cache.py  external_memory.py  failure_memory.py  kv_cache.py  matecode.sh  mcporter.json  memory.py  memview.sh  pyproject.toml  start.sh  start_bridge.sh  stop_bridge.sh  test_bot.py  tmux-setup.sh
hooks/: send-to-telegram.sh
